<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    style="@style/main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/empty_divider"
        android:showDividers="middle" >

        <android.support.constraint.ConstraintLayout
            android:id="@+id/wrapStart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <TextView
                android:id="@+id/textTimeStart"
                style="@style/textPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/start_of_window"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDisplayTimeStart"
                style="@style/textDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textTimeStart"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/myButtons" />

        </android.support.constraint.ConstraintLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/wrapEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1">

            <Button
                android:id="@+id/buttonEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/myButtons" />


            <TextView
                android:id="@+id/textTimeEnd"
                style="@style/textPrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/end_of_window"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textDisplayTimeEnd"
                style="@style/textDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/textTimeEnd"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
            android:id="@+id/textRepeat"
            style="@style/textPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repeat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="M" />

                    <CheckBox
                        android:id="@+id/Mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="T" />

                    <CheckBox
                        android:id="@+id/Tue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="W" />

                    <CheckBox
                        android:id="@+id/Wed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="T" />

                    <CheckBox
                        android:id="@+id/Thu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="F" />

                    <CheckBox
                        android:id="@+id/Fri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="S" />

                    <CheckBox
                        android:id="@+id/Sat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        style="@style/textPrompt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="S" />

                    <CheckBox
                        android:id="@+id/Sun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:id="@+id/textMessage"
            style="@style/textPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Message to display:" />

        <EditText
            android:id="@+id/editMessage"
            style="@style/textDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Good morning!" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/volume"
                android:layout_marginEnd="15dp"
                style="@style/textPrompt"/>

            <SeekBar
                android:id="@+id/seekBarVolume"
                android:progress="70"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="5dp"
                android:maxHeight="5dp"
                style="@style/ToggleSwitchTheme"/>

        </LinearLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ringtonePrompt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringtone"
                style="@style/textPrompt"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <TextView
                android:id="@+id/textRing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_ringtone"
                style="@style/textDisplay"
                app:layout_constraintTop_toBottomOf="@+id/ringtonePrompt"
                app:layout_constraintLeft_toLeftOf="parent"/>

            <Button
                android:id="@+id/buttonRingtone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change"
                app:layout_constraintRight_toRightOf="parent"
                style="@style/myButtons" />

        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/cancel"
                style="@style/myButtons" />

            <Button
                android:id="@+id/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:text="@string/save"
                style="@style/myButtons" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>